@startuml

title "Заказ через приложение наличных для получения в отделении банка"

entity "Клиент" {
  *клиент_id : INTEGER <<PK>>
  --
  *имя : VARCHAR(100)
  *фамилия : VARCHAR(100)
  *телефон : VARCHAR(20)
  *email : VARCHAR(255)
  серия_паспорта : VARCHAR(10)
  номер_паспорта : VARCHAR(20)
  кем_выдан : VARCHAR(255)
  *дата_регистрации : DATE
  статус : VARCHAR(20) <<"активен", "заблокирован", "удален">>
  *дата_создания : TIMESTAMP
  дата_обновления : TIMESTAMP
}

entity "БанковскийСчет" {
  *счет_id : INTEGER <<PK>>
  --
  *клиент_id : INTEGER <<FK>>
  *номер_счета : VARCHAR(34)
  *валюта : VARCHAR(3)
  *тип_счета : VARCHAR(20) <<"дебетовый", "кредитный"">>
  *дата_создания : TIMESTAMP
  *статус : VARCHAR(20)
}

entity "ОтделениеБанка" {
  *отделение_id : INTEGER <<PK>>
  --
  *код_отделения : VARCHAR(20)
  *название : VARCHAR(255)
  *адрес : VARCHAR(500)
  телефон : VARCHAR(20)
  *email : VARCHAR(255)
  часы_работы : VARCHAR(100)
  *город : VARCHAR(100)
  *регион : VARCHAR(100)
  статус : VARCHAR(20) << "активно", "неактивно", "временно_неактивно">>
}

entity "Сотрудник" {
  *сотрудник_id : INTEGER <<PK>>
  --
  *отделение_id : INTEGER <<FK>>
  *имя : VARCHAR(100)
  *фамилия : VARCHAR(100)
  должность : VARCHAR(100)
  *email : VARCHAR(255)
  внутренний_телефон : VARCHAR(10)
  *логин : VARCHAR(50)
  *роль : VARCHAR(30)
  *статус : VARCHAR(20)
}

entity "ЗаказНаличных" {
  *заказ_id : INTEGER <<PK>>
  --
  *клиент_id : INTEGER <<FK>>
  *счет_id : INTEGER <<FK>>
  *отделение_id : INTEGER <<FK>>
  *сумма : DECIMAL(15,2)
  *валюта : VARCHAR(3)
  *дата_запроса : TIMESTAMP
  *статус_Заказа : VARCHAR(30)
  комиссия : DECIMAL(10,2)
  *код_получения : VARCHAR(10)
  срок_получения : TIMESTAMP
  назначенный_сотрудник_id : INTEGER <<FK>>
  выполнивший_сотрудник_id : INTEGER <<FK>>
  дата_выполнения : TIMESTAMP
  причина_отмены : VARCHAR(500)
  дата_создания : TIMESTAMP
  дата_обновления : TIMESTAMP
}

entity "ДоставкаНаличных" {
  *доставка_id : INTEGER <<PK>>
  --
  *заказ_id : INTEGER <<FK>>
  *дата_запроса : TIMESTAMP
  *дата_доставки : TIMESTAMP
  *статус
  *инкассаторская_служба_id : VARCHAR(50)
  номер_автомобиля : VARCHAR(20)
  водитель : VARCHAR(200)
  код_подтверждения_доставки : VARCHAR(20)
  принявший_сотрудник_id : INTEGER <<FK>>
  примечания : TEXT
}

entity "Транзакция" {
  *транзакция_id : INTEGER <<PK>>
  --
  *заказ_id : INTEGER <<FK>>
  *счет_id : INTEGER <<FK>>
  *тип_транзакции : VARCHAR(30)
  *сумма : DECIMAL(15,2)
  *валюта : VARCHAR(3)
  *дата_транзакции : TIMESTAMP
  *статус : VARCHAR(20)
  внешний_id_транзакции : VARCHAR(100)
  сообщение_об_ошибке : TEXT
  откатная_транзакция_id : INTEGER <<FK>>
}

entity "Лимит" {
  *лимит_id : INTEGER <<PK>>
  --
  *клиент_id : INTEGER <<FK>>
  тип_лимита : VARCHAR(30) <<"дневной", "месячный", "макс_заказ">>
  *сумма_лимита : DECIMAL(15,2)
  *начало_периода : DATE
  *конец_периода : DATE
  текущее_использование : DECIMAL(15,2)
  дата_последнего_сброса : DATE
}

entity "ПроверкаБезопасности" {
  *проверка_id : INTEGER <<PK>>
  --
  *заказ_id : INTEGER <<FK>>
  *тип_проверки : VARCHAR(30)
  *дата_проверки : TIMESTAMP
  *статус : VARCHAR(20)
  оценка_риска : INTEGER
  сотрудник_безопасности_id : INTEGER <<FK>>
  дата_решения : TIMESTAMP
  комментарии_решения : TEXT
  причина_авто_блокировки : VARCHAR(500)
}


entity "ИсторияСтатусовЗаказа" {
  *история_id : INTEGER <<PK>>
  --
  *заказ_id : INTEGER <<FK>>
  *cотрудник_id : INTEGER <<FK>>
  *старый_статус : VARCHAR(30)
  *новый_статус : VARCHAR(30)
  *дата_изменения : TIMESTAMP
  причина_изменения : VARCHAR(500)
  ip_адрес : VARCHAR(45)
}

entity "НеудачныйЗаказ" {
  *неудачный_заказ_id : INTEGER <<PK>>
  --
  заказ_id : INTEGER <<FK>>
  *клиент_id : INTEGER <<FK>>
  *тип_ошибки : VARCHAR(30)
  *дата_ошибки : TIMESTAMP
  запрошенная_сумма : DECIMAL(15,2)
  детали_ошибки : TEXT
  рекомендуемое_действие : VARCHAR(500)
  повтор_разрешен : BOOLEAN
  дата_повтора : TIMESTAMP
  разрешено : BOOLEAN
  дата_разрешения : TIMESTAMP
}

entity "Уведомление" {
  *уведомление_id : INTEGER <<PK>>
  --
  *заказ_id : INTEGER <<FK>>
  *тип_уведомления : VARCHAR(30) <<"статус", "напоминание", "проблема", "новая_заявка", "проверка", "готова_выдача">>
  *канал : VARCHAR(20)
  *тема : VARCHAR(255)
  сообщение : TEXT
  *дата_отправки : TIMESTAMP
  *статус : VARCHAR(20)
  дата_прочтения : TIMESTAMP
  сообщение_об_ошибке : TEXT
}


entity "УведомлениеКлиенту" {
  *уведомление_клиенту_id : INTEGER <<PK>>
  --
  *уведомление_id : INTEGER <<FK>>
  *клиент_id : INTEGER <<FK>>
}

entity "УведомлениеСотруднику" {
  *уведомление_сотруднику_id : INTEGER <<PK>>
  --
  *уведомление_id : INTEGER <<FK>>
  *сотрудник_id : INTEGER <<FK>>
}



Клиент ||--o{ БанковскийСчет : "имеет"
Клиент ||--o{ ЗаказНаличных : "создает"
Клиент ||--o{ Лимит : "имеет"
Клиент ||--o{ НеудачныйЗаказ : "имеет"
Клиент ||--o{ УведомлениеКлиенту : "получает"

БанковскийСчет ||--o{ ЗаказНаличных : "используется_для"
БанковскийСчет ||--o{ Транзакция : "имеет"

ОтделениеБанка ||--o{ Сотрудник : "нанимает"
ОтделениеБанка ||--o{ ЗаказНаличных : "обслуживает"

Сотрудник ||--o{ ЗаказНаличных : "назначен_на"
Сотрудник ||--o{ ДоставкаНаличных : "принимает"
Сотрудник ||--o{ ПроверкаБезопасности : "выполняет"
Сотрудник ||--o{ УведомлениеСотруднику : "получает"

ЗаказНаличных -- ДоставкаНаличных : "имеет"
ЗаказНаличных ||--o{ Транзакция : "генерирует"
ЗаказНаличных ||--o{ ПроверкаБезопасности : "проходит"
ЗаказНаличных ||--o{ Уведомление : "инициирует"
ЗаказНаличных ||--o{ ИсторияСтатусовЗаказа : "имеет_историю"
ЗаказНаличных |o--o| НеудачныйЗаказ : "может_завершиться_как"
ЗаказНаличных ||--o{ УведомлениеКлиенту : "инициирует"
ЗаказНаличных ||--o{ УведомлениеСотруднику : "инициирует"


@enduml
